Fixed video link;  small UI improvements. Added return to feeder watch button.

--- a/FeederWatch/index.html
+++ b/FeederWatch/index.html
@@ -95,6 +95,21 @@ This page allows FeederWatch participants to add observations about bird interac
 
 
 
+
+<div id=return-panel class="modal fade">
+    <div class=modal-dialog>
+        <div class=modal-content>
+            <div class=modal-header>
+                <h3>Thank you</h3>
+            </div>
+
+            <div class=modal-body>
+                <p>Now returning to project FeederWatch...</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- video help pop-over panel -->
 
 <div id='video-panel' class="modal fade" data-wf="1"  data-description="intro video">
@@ -105,7 +120,7 @@ This page allows FeederWatch participants to add observations about bird interac
             </div>
 
             <div class=modal-body>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/vZK7qFRMC-Q" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LINHkQgyjBc" frameborder="0" allowfullscreen></iframe>
             </div>
 
             <div class=modal-footer>
@@ -203,12 +218,15 @@ This page allows FeederWatch participants to add observations about bird interac
 </div>
 <div id="interact_tablecontent" style="margin-left: 30px; margin-top:20px; margin-bottom:20px;" ></div>
 
+<hr>
+
+<button id="finishedButton" style="margin-left: 30px" type="button" class="btn btn-primary">All finished. Return to project FeederWatch</button>
 <button id="thanksAndResetButton" style="margin-left: 30px" type="button" class="btn btn-primary">Add observations for another count</button>
 
  <hr>
  <h4 style="margin-left: 20px">Contact Us!</h4>
- <h5 style="margin-left: 20px">Project Feederwatch page: <a href='http://feederwatch.org/' target="_blank">http://feederwatch.org</a></h5>
- <h5 style="margin-left: 20px">FeederWatch Interaction instructional pages:  <a href='http://feederwatch.org/blog/tell-us-about-bird-behavior-at-your-feeder' target="_blank">http://feederwatch.org/blog/tell-us-about-bird-behavior-at-your-feeder</a></h5>
- <h5 style="margin-left: 20px; margin-bottom: 40px">FeederWatch Interaction contact email:  <a href='mailto:feederwatch.interactions@gmail.com'>feederwatch.interactions@gmail.com</a></h5>
+ <h5 style="margin-left: 20px">FeederWatch Interaction instructional pages:  <a href='http://feederwatch.org/uncategorized/instructions-for-using-the-bird-interaction-data-form' target="_blank">http://feederwatch.org/uncategorized/instructions-for-using-the-bird-interaction-data-form</a></h5>
+ <h5 style="margin-left: 20px;">FeederWatch Interaction contact email:  <a href='mailto:feederwatch.interactions@gmail.com'>feederwatch.interactions@gmail.com</a></h5>
+ <h5 style="margin-left: 20px;  margin-bottom: 40px">Project Feederwatch page: <a href='http://feederwatch.org/' target="_blank">http://feederwatch.org</a></h5>
  
 
